--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -120,7 +120,7 @@
             android:textSize="@dimen/textsize_large" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_login_login"
         android:layout_width="match_parent"
         android:layout_height="30dp"
@@ -138,7 +138,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_login_password" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_login_regsiternow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
