--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,163 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.LoginFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!--guideline_horizontal-->
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15" />
-    <!--guideline_horizontal-->
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+    <data>
 
-    <!--iv_login_background-->
-    <ImageView
-        android:id="@+id/iv_login_background"
+        <variable
+            name="login"
+            type="com.example.customerfirebase.viewmodel.LoginViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/todo"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:context=".ui.fragment.LoginFragment">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/background_lightgrey_transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
+        <!--guideline_horizontal-->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
+        <!--guideline_horizontal-->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
-    <ImageView
-        android:id="@+id/iv_login_firebase_logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/white_border"
-        android:contentDescription="@string/todo"
-        android:padding="8dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/firebase_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
+        <!--iv_login_background-->
+        <ImageView
+            android:id="@+id/iv_login_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <!--tv_login_welcomeback-->
-    <TextView
-        android:id="@+id/tv_login_welcomeback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome_back"
-        android:textColor="@color/dark_grey"
-        android:textSize="@dimen/textsize_xxlarge"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
-        app:layout_constraintRight_toRightOf="@+id/guideline_vertical"
-        app:layout_constraintTop_toBottomOf="@+id/iv_login_firebase_logo" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/background_lightgrey_transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
 
-    <!--til_login_email-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_login_cid"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginEnd="@dimen/margin_large"
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_login_welcomeback">
+        <ImageView
+            android:id="@+id/iv_login_firebase_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/white_border"
+            android:contentDescription="@string/todo"
+            android:padding="8dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/firebase_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_login_cid"
+        <!--tv_login_welcomeback-->
+        <TextView
+            android:id="@+id/tv_login_welcomeback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome_back"
+            android:textColor="@color/dark_grey"
+            android:textSize="@dimen/textsize_xxlarge"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
+            app:layout_constraintRight_toRightOf="@+id/guideline_vertical"
+            app:layout_constraintTop_toBottomOf="@+id/iv_login_firebase_logo" />
+
+        <!--til_login_email-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_login_cid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic__key"
-            android:drawablePadding="@dimen/margin_small"
-            android:hint="@string/key"
-            android:inputType="number"
-            android:textSize="@dimen/textsize_large" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_large"
+            app:errorEnabled="true"
+            app:hintEnabled="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_login_welcomeback">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_login_cid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic__key"
+                android:drawablePadding="@dimen/margin_small"
+                android:hint="@string/key"
+                android:inputType="number"
+                android:text="@={login.id}"
+                android:textSize="@dimen/textsize_large" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    <!--til_login_password-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_login_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginEnd="@dimen/margin_large"
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_login_cid"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/colorPrimary">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_login_password"
+        <!--til_login_password-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_lock"
-            android:drawablePadding="@dimen/margin_medium"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:textSize="@dimen/textsize_large" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_large"
+            app:errorEnabled="true"
+            app:hintEnabled="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_login_cid"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorPrimary">
 
-    <Button
-        android:id="@+id/btn_login_login"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginTop="@dimen/margin_large"
-        android:layout_marginEnd="@dimen/margin_large"
-        android:background="@drawable/shape_rounded_lightblue_filled_noborder"
-        android:paddingTop="1dp"
-        android:paddingBottom="1dp"
-        android:text="@string/login"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textsize_large"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_login_password" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_login_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawablePadding="@dimen/margin_medium"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:text="@={login.pass}"
+                android:textSize="@dimen/textsize_large" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/tv_login_regsiternow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_large"
-        android:gravity="center"
-        android:text="@string/dont_have_an_account_yet_register_now"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/textsize_medium"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_login_login"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:background="@drawable/shape_rounded_lightblue_filled_noborder"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:text="@string/login"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textsize_large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_login_password" />
 
-    <ProgressBar
-        android:id="@+id/spinner_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_login_regsiternow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_large"
+            android:gravity="center"
+            android:text="@string/dont_have_an_account_yet_register_now"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/textsize_medium"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login_login" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/spinner_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
+
+
+
+
