--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,186 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.RegisterFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!--guideline_horizontal-->
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15" />
-    <!--guideline_horizontal-->
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+    <data>
 
-    <!--iv_register_background-->
-    <ImageView
-        android:id="@+id/iv_register_background"
+        <variable
+            name="registration"
+            type="com.example.customerfirebase.viewmodel.RegisterViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/todo"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:context=".ui.fragment.RegisterFragment">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/background_lightgrey_transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
+        <!--guideline_horizontal-->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
+        <!--guideline_horizontal-->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
-    <!--iv_splashScreen_inspirecoding_logo-->
-    <ImageView
-        android:id="@+id/iv_register_firebase_logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/white_border"
-        android:contentDescription="@string/todo"
-        android:padding="8dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/firebase_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
+        <!--iv_register_background-->
+        <ImageView
+            android:id="@+id/iv_register_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_register_createaccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/create_account"
-        android:textColor="@color/dark_grey"
-        android:textSize="@dimen/textsize_xxlarge"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
-        app:layout_constraintRight_toRightOf="@+id/guideline_vertical"
-        app:layout_constraintTop_toBottomOf="@+id/iv_register_firebase_logo" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/background_lightgrey_transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
 
-    <!--til_register_name-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_register_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginEnd="@dimen/margin_large"
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_register_createaccount">
+        <!--iv_splashScreen_inspirecoding_logo-->
+        <ImageView
+            android:id="@+id/iv_register_firebase_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/white_border"
+            android:contentDescription="@string/todo"
+            android:padding="8dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/firebase_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_register_name"
+        <TextView
+            android:id="@+id/tv_register_createaccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/create_account"
+            android:textColor="@color/dark_grey"
+            android:textSize="@dimen/textsize_xxlarge"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
+            app:layout_constraintRight_toRightOf="@+id/guideline_vertical"
+            app:layout_constraintTop_toBottomOf="@+id/iv_register_firebase_logo" />
+
+        <!--til_register_name-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_register_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_person"
-            android:drawablePadding="@dimen/margin_small"
-            android:hint="@string/name"
-            android:inputType="text"
-            android:textSize="@dimen/textsize_large" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_large"
+            app:errorEnabled="true"
+            app:hintEnabled="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_register_createaccount">
 
-    <!--til_register_email-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_register_key"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginEnd="@dimen/margin_large"
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_register_name">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_register_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_person"
+                android:drawablePadding="@dimen/margin_small"
+                android:hint="@string/name"
+                android:inputType="text"
+                android:text="@={registration.name}"
+                android:textSize="@dimen/textsize_large" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_register_key"
+        <!--til_register_email-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_register_key"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic__key"
-            android:drawablePadding="@dimen/margin_small"
-            android:hint="@string/key"
-            android:inputType="number"
-            android:textSize="@dimen/textsize_large" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_large"
+            app:errorEnabled="true"
+            app:hintEnabled="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_register_name">
 
-    <!--til_register_password-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_register_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginEnd="@dimen/margin_large"
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_register_key"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/colorPrimary">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_register_key"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic__key"
+                android:drawablePadding="@dimen/margin_small"
+                android:hint="@string/key"
+                android:inputType="number"
+                android:text="@={registration.id}"
+                android:textSize="@dimen/textsize_large" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_register_password"
+        <!--til_register_password-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_register_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_lock"
-            android:drawablePadding="@dimen/margin_medium"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:textSize="@dimen/textsize_large" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_large"
+            app:errorEnabled="true"
+            app:hintEnabled="false"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_register_key"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorPrimary">
 
-    <!--btn_register_login-->
-    <Button
-        android:id="@+id/btn_register_login"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:layout_marginEnd="@dimen/margin_large"
-        android:background="@drawable/shape_rounded_lightblue_filled_noborder"
-        android:paddingBottom="1dp"
-        android:text="@string/register"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textsize_large"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_register_password" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_register_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawablePadding="@dimen/margin_medium"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:text="@{registration.pass}"
+                android:textSize="@dimen/textsize_large" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <!--tv_register_loginnow-->
-    <TextView
-        android:id="@+id/tv_register_loginnow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_large"
-        android:gravity="center"
-        android:text="@string/already_have_an_account"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/textsize_medium"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_register_login" />
+        <!--btn_register_login-->
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_register_login"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:background="@drawable/shape_rounded_lightblue_filled_noborder"
+            android:paddingBottom="1dp"
+            android:text="@string/register"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textsize_large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_register_password" />
 
-    <ProgressBar
-        android:id="@+id/spinner_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        <!--tv_register_loginnow-->
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_register_loginnow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_large"
+            android:gravity="center"
+            android:text="@string/already_have_an_account"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/textsize_medium"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_register_login" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/spinner_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
