--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_customerRegistrationFragment"
+            app:destination="@id/customerRegistrationFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -23,4 +26,9 @@
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/customerRegistrationFragment"
+        android:name="com.example.customerfirebase.ui.fragment.CustomerRegistrationFragment"
+        android:label="CustomerRegistrationFragment"
+        tools:layout="@layout/fragment_customer_registration" />
 </navigation>
