--- a/app/src/main/res/layout/product_item_details.xml
+++ b/app/src/main/res/layout/product_item_details.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtvProductName"
@@ -11,8 +11,11 @@
         android:layout_margin="10dp"
         android:padding="10dp"
         android:textAlignment="viewStart"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/textsize_large"
+        android:background="@color/colorPrimary"
+        android:text="@string/name"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
