design customer list and collapsing tool bar

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,6 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.customerfirebase.ui.fragment.LoginFragment"
-        android:label="Login"
         tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
@@ -21,7 +20,6 @@
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.customerfirebase.ui.fragment.RegisterFragment"
-        android:label="Registraton"
         tools:layout="@layout/fragment_registration">
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
@@ -31,7 +29,6 @@
     <fragment
         android:id="@+id/customerRegistrationFragment"
         android:name="com.example.customerfirebase.ui.fragment.CustomerRegistrationFragment"
-        android:label="Customer Registration"
         tools:layout="@layout/fragment_customer_registration">
         <action
             android:id="@+id/action_customerRegistrationFragment_to_customerDashboardFragment"
@@ -41,7 +38,6 @@
     <fragment
         android:id="@+id/productFragment"
         android:name="com.example.customerfirebase.ui.fragment.ProductFragment"
-        android:label="Product List"
         tools:layout="@layout/fragment_product">
         <argument
             android:name="productDetails"
@@ -64,7 +60,6 @@
     <fragment
         android:id="@+id/productDetailsFragment"
         android:name="com.example.customerfirebase.ui.fragment.ProductDetailsFragment"
-        android:label="Product Details"
         tools:layout="@layout/fragment_product_details">
         <argument
             android:name="productDetails"
@@ -75,7 +70,7 @@
     <fragment
         android:id="@+id/categoryFragment"
         android:name="com.example.customerfirebase.ui.fragment.CategoryFragment"
-        android:label="Product Category">
+        >
         <argument
             android:name="categoryId"
             android:defaultValue="@null"
@@ -87,8 +82,7 @@
     </fragment>
     <fragment
         android:id="@+id/productInsertFragment"
-        android:name="com.example.customerfirebase.ui.fragment.ProductInsertFragment"
-        android:label="Add Product">
+        android:name="com.example.customerfirebase.ui.fragment.ProductInsertFragment">
         <argument
             android:name="category"
             android:defaultValue="@null"
@@ -105,8 +99,7 @@
     </fragment>
     <fragment
         android:id="@+id/customerDashboardFragment"
-        android:name="com.example.customerfirebase.ui.fragment.CustomerDashboardFragment"
-        android:label="Customer Dashboard">
+        android:name="com.example.customerfirebase.ui.fragment.CustomerDashboardFragment">
         <action
             android:id="@+id/action_customerDashboardFragment_to_customerRegistrationFragment"
             app:destination="@id/customerRegistrationFragment" />
@@ -116,8 +109,7 @@
     </fragment>
     <fragment
         android:id="@+id/customerDetailsFragment"
-        android:name="com.example.customerfirebase.ui.fragment.CustomerDetailsFragment"
-        android:label="Customer Details">
+        android:name="com.example.customerfirebase.ui.fragment.CustomerDetailsFragment">
         <argument
             android:name="customerDetails"
             android:defaultValue="@null"
