--- a/app/src/main/res/layout/fragment_customer_dashboard.xml
+++ b/app/src/main/res/layout/fragment_customer_dashboard.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
+        android:background="@color/colorPrimary"
         android:src="@drawable/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
