--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="light_grey">#B9BFC7</color>
     <color name="dark_grey">#464E5B</color>
     <color name="seventy_transparent_white">#70EAEFF6</color>
+    <color name="incharge_dark_grey">#312D2C</color>
 </resources>
