--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="app_bar_height">190dp</dimen>
+    <dimen name="general_margin">20dp</dimen>
+    <dimen name="button_round_radius">3dp</dimen>
 </resources>
