--- a/app/src/main/res/layout/fragment_customer_dashboard.xml
+++ b/app/src/main/res/layout/fragment_customer_dashboard.xml
@@ -32,6 +32,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
         android:background="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
