--- a/app/src/main/res/layout/fragment_customer_details.xml
+++ b/app/src/main/res/layout/fragment_customer_details.xml
@@ -198,6 +198,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
             android:src="@drawable/ic_add" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
