--- a/app/src/main/res/layout/fragment_product_insert.xml
+++ b/app/src/main/res/layout/fragment_product_insert.xml
@@ -88,17 +88,30 @@
             android:background="@drawable/blue_outline"
             app:layout_constraintTop_toBottomOf="@+id/tv_insert_product">
 
-            <Spinner
+            <com.skydoves.powerspinner.PowerSpinnerView
                 android:id="@+id/sCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.AppCompat.Spinner.DropDown"
-                android:spinnerMode="dropdown"
-                android:theme="@style/Theme.MaterialComponents.Light"
+                android:background="@color/md_blue_200"
+                android:gravity="center"
+                android:hint="Category"
                 android:padding="10dp"
-                app:layout_constraintEnd_toEndOf="@id/constraint_spinner"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white_70"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/constraint_spinner"
-                app:layout_constraintTop_toTopOf="@id/constraint_spinner" />
+                app:layout_constraintTop_toTopOf="@id/constraint_spinner"
+                app:spinner_arrow_gravity="end"
+                app:spinner_arrow_padding="8dp"
+                app:spinner_divider_color="@color/white_70"
+                app:spinner_divider_show="true"
+                app:spinner_divider_size="0.4dp"
+                app:spinner_item_array="@array/category_array"
+                app:spinner_popup_animation="dropdown"
+                app:spinner_popup_background="@color/background800"
+                app:layout_constraintEnd_toEndOf="@id/constraint_spinner"
+                app:spinner_popup_elevation="14dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
