--- a/app/src/main/res/layout/product_item_grid.xml
+++ b/app/src/main/res/layout/product_item_grid.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@color/colorPrimary"
     android:padding="3dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,18 +18,19 @@
 
         <ImageView
             android:id="@+id/image_product"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
             android:adjustViewBounds="true"
             android:padding="10dp"
             android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
             app:layout_constraintTop_toTopOf="@id/constraint_customer_item1"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="@string/name"
@@ -39,49 +38,52 @@
             android:textAllCaps="true"
             android:textColor="#221D1D"
             android:textSize="@dimen/textsize_xxlarge"
-            android:layout_margin="5dp"
-            app:layout_constraintLeft_toRightOf="@id/image_product"
-            app:layout_constraintTop_toTopOf="@id/constraint_customer_item1" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/image_product" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductQuantity"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:padding="5dp"
             android:text="@string/quantity"
+            android:textAlignment="center"
             android:textColor="#221D1D"
             android:textSize="@dimen/textsize_xlarge"
-            app:layout_constraintLeft_toRightOf="@id/image_product"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mtvProductName" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductPrice"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:padding="5dp"
             android:text="@string/price"
+            android:textAlignment="center"
             android:textColor="#221D1D"
             android:textSize="@dimen/textsize_xlarge"
-            app:layout_constraintLeft_toRightOf="@id/image_product"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mtvProductQuantity" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductTotal"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:padding="5dp"
-            android:text="@string/total"
+            android:text="@string/name"
+            android:textAlignment="center"
             android:textColor="#221D1D"
             android:textSize="@dimen/textsize_xlarge"
-            app:layout_constraintLeft_toRightOf="@id/image_product"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mtvProductPrice" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
 
 
 
